# algoviz

./: Cargo.toml  README.md
src/: main.rs
src/sorting/: bubble_sort.rs  mod.rs
src/visualizer/: array.rs  mod.rs
